--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@
 *~
 *.swp
 *.swo
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
